# sensing-garden-web

./: .dockerignore  .gitignore  .windsurfrules  Dockerfile  README.md  activity.py  analyze_sidara_videos.py  app.py  apprunner.yaml  docker-compose.yml  generate_thumbnails.py  pyproject.toml  requirements.txt  setup.sh  start.sh  start_local.sh
scripts/: deploy.sh
static/css/: unified_feed.css
static/js/: bbox_overlays.js  table_scripts.js  unified_feed.js
templates/: activity_logs.html  add_model.html  admin.html  base.html  classifications.html  detections.html  device_classifications.html  device_content.html  device_detections.html  device_environment.html  device_feed.html  error.html  index.html  item_detail.html  login.html  models.html  s3_browser.html  sidara.html  species_detail.html  table.html  test_pagination.html  thumbnail_generator.html  track_detail.html  videos.html
terraform/: DEPLOYMENT.md  README.md  create_tfvars.sh  main.tf  outputs.tf  set_env.sh  terraform.tfvars.example  variables.tf
terraform/modules/apprunner/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf
tests/: test_csv_download.py  test_date_validation.py  test_health.py  test_heartbeats.py  test_model_bundle_admin.py  test_s3_browser_activity.py
